[package]
name = "gkey"
version = "0.1.0"
edition = "2021"
authors = ["Krishap krishapbusiness@gmail.com"]

[dependencies]
env_logger = "0.11.5"
libc = "0.2.161"
log = "0.4.22"
pin-project = "1.1.7"
tokio = { version = "1.41.0", features = ["io-std", "macros", "net", "rt-multi-thread", "signal"] }
uhid-virt = "0.0.6"

[[bin]]
name = "gkey-service"
